Bug 359051 - Incorrect button name in string message
Summary: Incorrect button name in string message
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: POP3 Resource (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-06 03:51 UTC by André Marcelo Alvarenga
Modified: 2016-02-06 08:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Screenshot (174.62 KB, image/png)
2016-02-06 03:53 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-02-06 03:51:07 UTC
See screenshot.

This dialog is open when I click on "Use pipelining for faster mail download" option.

The message in this dialog refers to "Check What the Server Supports" button, but in this configuration dialog there is just a "Auto Detect" button.

"Check What the Server Supports" is a old button name, but I don't if it checks this option.

Reproducible: Always




I'm using KDE Applications 15.12.
Comment 1 André Marcelo Alvarenga 2016-02-06 03:53:31 UTC
Created attachment 97040 [details]
Screenshot

"Check What the Server Supports" is a old button name, but I don't know if it checks this option.
Comment 2 Laurent Montel 2016-02-06 08:24:26 UTC
You're right I will change it.
Comment 3 Laurent Montel 2016-02-06 08:29:32 UTC
Git commit 6d5314a654f1cda07ea7a49c7bfa1c19b107597e by Montel Laurent.
Committed on 06/02/2016 at 08:29.
Pushed by mlaurent into branch 'master'.

Fix Bug 359051 - Incorrect button name in string message

FIXED-IN: 5.2

M  +2    -2    resources/pop3/accountdialog.cpp

http://commits.kde.org/kdepim-runtime/6d5314a654f1cda07ea7a49c7bfa1c19b107597e