Fix Bug 359051 - Incorrect button name in string message

FIXED-IN: 5.2
BUG: 359051